# LiVo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Multiview/: CMakeLists.txt
Multiview/commands/: ffmpeg.md  gstreamer_commands.md
Multiview/config/: chrony_client.conf  chrony_server.conf  draco_params.json  panoptic.json  panoptic_160224_ultimatum2.json  panoptic_160226_mafia1.json  panoptic_160422_haggling1.json  panoptic_160906_band2.json  panoptic_160906_ian3.json  panoptic_160906_pizza1.json  panoptic_170307_dance5.json  panoptic_170915_office1.json  panoptic_170915_toddler4.json  zstd_params.json
Multiview/include/: DataPlayback.h  MultiDeviceCapturer.h  MultiviewPointCloud.h  PointCloudViewer.h  calibration.h  colorized_depth.h  consts.h  filter.h  frameInfo_generated.h  frustum.h  iMarker.h  k4aconsts.h  k4autils.h  k4aview.h  kalman.h  mahimahi.h  marker.h  nanoflann.h  octree.h  pconsts.h  shm.h  timer.h  utils.h  view.h  voxel.h
Multiview/include/Client/: BitrateSplitterClient.h  MultiviewClient.h  MultiviewClientPool.h  MultiviewClientPoolNew.h  MultiviewPointCloudClient.h  NetworkReceiver.h  PointCloudStreamer.h  ReceiverFrameBuffer.h  WebRTCClient.h  WebRTCReceiver.h
Multiview/include/Server/: BitrateSplitterServer.h  MultiviewPointCloudServer.h  MultiviewServer.h  MultiviewServerPool.h  MultiviewServerPoolNew.h  MultiviewServerPoolTest.h  NetworkSender.h  SenderFrameBuffer.h  WebRTCSender.h  WebRTCServer.h
Multiview/include/test/: ffmpeg.h  utils.h
Multiview/include/test/webrtc-original-gstreamer-sample/: custom_agent.h
Multiview/lib/FFmpeg/: CMakeLists.txt
Multiview/src/: Multiview.cpp  MultiviewPointCloud.cpp  PointCloudViewer.cpp  calibration.cpp  client.cpp  client_pool.cpp  client_pool_new.cpp  frustum.cpp  k4autils.cpp  kalman.cpp  mahimahi.cpp  main.cpp  marker.cpp  octree.cpp  pipeline.cpp  server.cpp  server_pool.cpp  server_pool_new.cpp  shm.cpp  timer.cpp  utils.cpp  voxel.cpp
Multiview/src/Client/: BitrateSplitterClient.cpp  MultiviewClient.cpp  MultiviewClientPool.cpp  MultiviewClientPoolNew.cpp  MultiviewPointCloudClient.cpp  NetworkReceiver.cpp  Open3DVisualizer.cpp  PointCloudStreamer.cpp  ReceiverFrameBuffer.cpp  WebRTCClient.cpp  WebRTCReceiver.cpp
Multiview/src/Panoptic/: DataPlayback.cpp  bitrate_selection.ipynb  copy_data.sh  panoptic.cpp  panoptic_playback.cpp  panoptic_ptcl_draco_bitrate_table.cpp  panoptic_ptcl_draco_output_generation.cpp  panoptic_ptcl_draco_output_video_generation.ipynb  panoptic_ptcl_draco_output_video_generation.py  panoptic_ptcl_gt_video_generation.ipynb  panoptic_ptcl_test_compression.cpp  panoptic_standalone_gt.cpp  panoptic_standalone_o3d_tensor.cpp  panoptic_standalone_ptcl.cpp  panoptico3d.cpp  prepare_data.cpp
Multiview/src/References/: octree_reference.cpp
Multiview/src/Server/: BitrateSplitterServer.cpp  MultiviewPointCloudServer.cpp  MultiviewServer.cpp  MultiviewServerPool.cpp  MultiviewServerPoolNew.cpp  MultiviewServerPoolTest.cpp  NetworkSender.cpp  SenderFrameBuffer.cpp  WebRTCSender.cpp  WebRTCServer.cpp
Multiview/src/test/: circular_buffer.cpp  colorized_depth.cpp  depth_colorized.txt  draco_decoder_test.cpp  draco_encoder_test.cpp  echo_client.py  echo_server.py  ffmpeg.cpp  frameInfo.fbs  frustum_test.cpp  kalman_predictor_test.cpp  kalman_test.cpp  kalman_test_new.cpp  kalman_visualize_test.cpp  metric_calc_test.cpp  metric_calc_test.ipynb  mmap_client.py  mmap_server.cpp  qrcode_test.cpp  rate_limit_test.cpp  test.cpp  utils.cpp
Multiview/src/test/Multiview/Frame/: FrameInfo.py
Multiview/src/test/webrtc-gstreamer/: CMakeLists.txt  CMakeLists_Backup.txt  README_Rajrup.md  TilingEncoderCPU.cpp  TilingEncoderCPUParallel.cpp  TilingEncoderGPU.cpp  WebRTCReceiver.cpp  WebRTCServer.cpp  main.cpp  receiver_only.cpp  receiver_webrtc_only.cpp  run_receiver_webrtc_only.sh  run_sender_webrtc_only.sh  run_tiling_encoder.sh  sender_only.cpp  sender_webrtc_only.cpp  tiling_nontiling_encoder.cpp
Multiview/src/test/webrtc-gstreamer/include/: TilingEncoderCPU.h  TilingEncoderCPUParallel.h  TilingEncoderGPU.h  WebRTCReceiver.h  WebRTCServer.h
Multiview/src/test/webrtc-gstreamer/public/: index.html
Multiview/src/test/webrtc-original-gstreamer-sample/: custom_agent.cpp
Scripts/: mm_time  run_client_band2.sh  run_mahimahi.sh  run_mahimahi_server.sh  run_server_band2.sh  run_standalone_gt.sh  run_standalone_ptcl.sh  setup_mahimahi_client.sh  setup_mahimahi_server.sh  setup_remove_mahimahi_server.sh
Scripts/Experiments/: evaluate_quality.py  panoptic_dataset_statistics.ipynb  plot_bitrate_distortion.ipynb  plot_compression_comparison.ipynb  plot_draco_starline++_livo.ipynb  plot_e2e_latency.ipynb  plot_fps.ipynb  plot_kpcull_pcull.ipynb  plot_mahimahi_traces.ipynb  plot_pssim_quality_draco_livo.ipynb  plot_ptcl_compression_distortion.ipynb  plot_quality.ipynb  plot_user_study.ipynb  test.ipynb
Scripts/ablation/: plot_compression_comparison.ipynb
Scripts/backup/: run_client_band2.sh  run_client_band2_distortion.sh  run_client_dance5.sh  run_client_dance5_ablation.sh  run_client_dance5_distortion.sh  run_client_haggling1.sh  run_client_ian3.sh  run_client_kpcull_vs_pcull.sh  run_client_mafia1.sh  run_client_moonbaby1.sh  run_client_office1.sh  run_client_office1_ablation.sh  run_client_office1_distortion.sh  run_client_pizza1.sh  run_client_pizza1_distortion.sh  run_client_toddler4.sh  run_client_toddler4_distortion.sh  run_client_ultimatum2.sh  run_draco_output_video.sh  run_ptcl_generate_bitrate_table.sh  run_server_band2.sh  run_server_band2_distortion.sh  run_server_dance5.sh  run_server_dance5_ablation.sh  run_server_dance5_distortion.sh  run_server_haggling1.sh  run_server_ian3.sh  run_server_kpcull_vs_pcull.sh  run_server_mafia1.sh  run_server_moonbaby1.sh  run_server_office1.sh  run_server_office1_ablation.sh  run_server_office1_distortion.sh  run_server_pizza1.sh  run_server_pizza1_distortion.sh  run_server_toddler4.sh  run_server_toddler4_distortion.sh  run_server_ultimatum2.sh
Scripts/culled_views_gt_generation/: run_client_band2.sh  run_client_dance5.sh  (+8 more)
(+359 files in other folders)
